[package]
name = "faer-ext"
version = "0.7.1"
edition = "2021"
authors = ["sarah <>"]
description = "faer API for interoperability with external libraries"
readme = "README.md"
repository = "https://github.com/sarah-ek/faer-ext/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]
rust-version = "1.67.0"

[dependencies]
faer = { version = "0.23.0", default-features = false }
nalgebra = { version = "0.34", default-features = false, optional = true }
ndarray = { version = "0.16", default-features = false, optional = true }
num-complex = { version = "0.4.5", default-features = false }
polars = { version = "0.40", features = ["lazy"], optional = true }
numpy = { version="0.26.0", default-features = false, optional = true }
pyo3 = { version="0.26", default-features = false, optional = true }

[dev-dependencies]
nalgebra = { version = "0.34" }

[features]
default = []
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]
polars = ["dep:polars"]
numpy = ["dep:numpy", "dep:pyo3"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
